css/style.css
html {
    box-sizing: border-box
    }
    
    /* The Universal Selector */
    *, /* All elements*/
    *::before, /* All ::before pseudo-elements */
    *::after { /* All ::after pseudo-elements */
    /* height & width will now include border & padding by default
       but can be over-ridden as needed */
    box-sizing: inherit;
    }
    
    /* resets font size to be 62.5% of the user preference - 
     in most browser configurations this will be 10px */
    :root {
    font-size: 62.5%
    }
    
    body {
        background-color: gray;
      /* Use a system font, if none are available use an available sans-sarif font */
        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
          Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
        margin: 0;
        color: whitesmoke;
        display: grid;
        font-size: 2.4rem;
        height: 100vh;
        /* mobile first - single column */
        grid-template-columns: 1fr;
        grid-template-rows:  .35fr auto auto ;
        grid-template-areas: 
          "header"
          "side"
          "content"
          "footer";
      }
      header {
        grid-area: header;
        background-color: #e7e6e6;
        text-align: center;
        place-items: center;
        color: #1a1a1a;
        padding-top: 5%;
    
      }
      header > img {
        border-radius: 50px;
        border: 5px solid rgb(39, 168, 39) 
      }


      footer {
        background-color: #21c056;
        color: #ffffff;
        grid-area: footer;
        text-align: center;
    
      }
      
      aside {
        background-color: #d6d4d4;
        color: #1a1a1a;
        grid-area: side;
        text-align: center;
       
      }
      
      main {
        grid-area: content;
        background-color: #e7e6e6;
        color: #1a1a1a;
        text-align: center;
      }
      .head {
          display: grid;
          place-items: center;
      }
      .mn {
          display: grid;
          place-items: center;
      }
      .foot {
          display: grid;
          place-items: left;
      }
      .side {
          display: grid;
          place-items: center;
      }
#description{
    display: none;
}
#jobname{
    display: none;
}
#stars {
    color: gold;
}
#icon1 {
    
    padding-top: 15px;
    right: 20%;
    position: relative;
}
#icon2 {
    padding-top: 10px;
    left: 20%;
    position: relative;
}
      /* Another way to center content, this time using flexbox */
    
      
      @media only screen and (min-width: 768px) {
         body { grid-template-columns: .5fr 1.5fr;
          grid-template-rows: 1.75fr .25fr;
          grid-template-areas: 
          "header side"
          "footer content";
         }
        
        
         aside{
             padding-left: 10%;
             display: flex;
             justify-content: left;
             text-align: left;
         }
        
         main {
             padding-left: 10%;
           display: flex;
           justify-content: left;
           text-align: left;

         }
         
         #jobname {
             display: grid;
         }
         #picname {
             display: none;
         }
         #description {
            border-left: rgb(39, 168, 39) solid;
            padding-left: 5%;
            display: grid;
            font-size: 1.8rem;
      }
    }

